<resources>
    <string name="app_name">SimpleCalc</string>
    <!-- Hint for first operand EditText -->
    <string name="type_operand_one_hint">Masukkan Angka Pertama</string>

    <!-- Hint for second operand EditText -->
    <string name="type_operand_two_hint">Masukkan Angka Kedua</string>

    <!-- Button label for add operation -->
    <string name="add_operation_text">Tambah</string>

    <!-- Button label for subtract operation -->
    <string name="sub_operation_text">Kurang</string>

    <!-- Button label for divide operation -->
    <string name="div_operation_text">Bagi</string>

    <!-- Button label for mul operation -->
    <string name="mul_operation_text">Kali</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
</resources>